--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <div id="app">
+      <a href="sub.html">跳转</a>
       <p>{{ this.$store.state.count }}</p>
       <button @click="onclick1">+</button>
       <input type="date" v-model="newDate" />
