--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <div id="app">
-      <img id="main" src="./static/png/2_crop.png" />
+      <img id="main" src="./static/png/2_crop.png" alt="Image/>
     </div>
     <div id="angleDisplay">Move your mouse to see the angle!</div>
   </body>
